[gd_scene load_steps=6 format=2]

[ext_resource path="res://Materials/Particles/staroutline.png" type="Texture" id=1]
[ext_resource path="res://MiningMaterials/Textures/mat-copper.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Pickups/MineralDrop.gd" type="Script" id=3]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.52
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
angular_velocity = 360.0
angular_velocity_random = 0.67
orbit_velocity = 1.0
orbit_velocity_random = 1.0
radial_accel = 100.0
radial_accel_random = 0.16
angle = 1.0
scale = 0.01
scale_random = 0.03
color = Color( 1, 1, 1, 0.443137 )

[sub_resource type="CircleShape2D" id=2]

[node name="MineralDrop" type="Node2D"]
position = Vector2( 480, 270 )
script = ExtResource( 3 )

[node name="MineralDust" type="Particles2D" parent="."]
amount = 32
lifetime = 2.0
preprocess = 1.5
speed_scale = 0.13
explosiveness = 0.44
randomness = 1.0
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="PickupTrigger" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupTrigger"]
shape = SubResource( 2 )
